[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "sitemap-tester"
version = "0.1.0"
description = "Crawl sitemap.xml files and test all discovered URLs with retries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
sitemap-tester = "sitemap_tester.cli:main_entry"

[tool.uv]
package = true

